--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,16 @@
+cool-retro-term (0.9-3) unstable; urgency=medium
+
+  * Adopt packaging
+  * Track upstream changes
+  * Put in section x11
+  * Bump debian standards version
+  * Allow parallel builds
+  * Hardened build per policy, for no particularly good reason
+  * Register as alternative x-terminal-emulator
+  * Generate & install man page using help2man
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Sat, 09 Apr 2016 20:35:26 +0100
+
 cool-retro-term (0.9-2) UNRELEASED; urgency=medium
 
   * Adding missing dependencies
