--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 cool-retro-term (1.0.0-1) unstable; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Dmitry Yu Okunev <dyokunev@ut.mephi.ru>  Thu, 26 Jan 2017 17:59:58 +0300
