--- a/packaging/debian/cool-retro-term.1
+++ b/packaging/debian/cool-retro-term.1
@@ -1,6 +1,6 @@
 .TH cool-retro-term 1 "August 22 2016"
 .SH NAME
-cool-retro-term \- terminal emulator mimicing the old cathode display
+cool-retro-term \- terminal emulator mimicking the old cathode display
 .SH SYNOPSIS
 "Usage: ./cool\-retro\-term [\-\-default\-settings] [\-\-workdir <dir>] [\-\-program <prog>] [\-p|\-\-profile <prof>] [\-\-fullscreen] [\-h|\-\-help]"
 .SH DESCRIPTION
@@ -27,5 +27,5 @@ Run cool\-retro\-term in fullscreen.
 Print this help.
 .TP
 \fB\-\-verbose\fR
-Print additional informations such as profiles and settings.
+Print additional information such as profiles and settings.
 .PP
