--- a/packaging/debian/cool-retro-term.1
+++ b/packaging/debian/cool-retro-term.1
@@ -1,31 +1,43 @@
-.TH cool-retro-term 1 "August 22 2016"
+.TH "COOL-RETRO-TERM" 1 "2017-11-06"
 .SH NAME
-cool-retro-term \- terminal emulator mimicking the old cathode display
+cool\-retro\-term \- terminal emulator mimicking an old cathode display
 .SH SYNOPSIS
-"Usage: ./cool\-retro\-term [\-\-default\-settings] [\-\-workdir <dir>] [\-\-program <prog>] [\-p|\-\-profile <prof>] [\-\-fullscreen] [\-h|\-\-help]"
+\fBcool\-retro\-term\fR [\fIOPTIONS\fR]
+.br
+\fBcool\-retro\-term\fR [\fIOPTIONS\fR] -e \fICOMMAND\fR [\fIARGUMENT\fR...]
 .SH DESCRIPTION
-This manual page documents briefly the
-.B cool-retro-term
-command.
+This manual page documents briefly the \fBcool\-retro\-term\fR command.
+.PP
+\fBcool\-retro\-term\fR is a terminal emulator which mimics the
+look and feel of the old cathode tube screens.
+It has been designed to be eye-candy,
+customizable, and reasonably lightweight.
 .SH OPTIONS
 .TP
 \fB\-\-default\-settings\fR
-Run cool\-retro\-term with the default settings
+Run with the default settings.
 .TP
-\fB\-\-workdir\fR <dir>
-Change working directory to 'dir'
-.TP
-\fB\-e\fR <cmd>
-Command to execute. This option will catch all following arguments, so use it as the last option.
+\fB\-e\fR \fICOMMAND\fR
+Command to execute. This should be used as the last option.
+All the arguments following \fICOMMAND\fR will be passed to said command.
 .TP
 \fB\-\-fullscreen\fR
-Run cool\-retro\-term in fullscreen.
-.HP
-\fB\-p\fR|\-\-profile <prof> Run cool\-retro\-term with the given profile.
+Run in fullscreen mode.
 .TP
-\fB\-h\fR|\-\-help
-Print this help.
+\fB\-h\fR, \fB\-\-help\fR
+Print a help screen and exit.
+.TP
+\fB\-p\fR \fIPROFILE\fR, \fB\-\-profile\fR \fIPROFILE\fR
+Run with the given profile.
+.TP
+\fB\-\-workdir\fR \fIDIR\fR
+Start with \fIDIR\fR as the working directory.
 .TP
 \fB\-\-verbose\fR
 Print additional information such as profiles and settings.
-.PP
+.TP
+\fB\-v\fR, \fB\-\-version\fR
+Print the version number and exit.
+.SH LICENCE
+This program is available under the terms of the GNU General Public License,
+version 3 or any later version, as published by the Free Software Foundation.
