Add a description of the -T option to the man page

--- a/packaging/debian/cool-retro-term.1
+++ b/packaging/debian/cool-retro-term.1
@@ -30,6 +30,9 @@ Print a help screen and exit.
 \fB\-p\fR \fIPROFILE\fR, \fB\-\-profile\fR \fIPROFILE\fR
 Run with the given profile.
 .TP
+\fB\-T\fR \fITITLE\fR
+Use \fITITLE\fR as the window title.
+.TP
 \fB\-\-workdir\fR \fIDIR\fR
 Start with \fIDIR\fR as the working directory.
 .TP
